修复参数校验不生效的bug